# AI-Employee-Hackathon-0-Bronze-Tier

./: .gitignore  BRONZE_TIER_IMPLEMENTATION.md  QWEN.md  README.md  agent_skills.py  bronze_tier.py  orchestrator.py  pyproject.toml  requirements-dev.txt  requirements.txt  skill.md  vault_operations_demo.py
AI_Employee_Vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
AI_Employee_Vault/Briefings/: 2026-02-14_Monday_Briefing.md  2026-02-15_Monday_Briefing.md
AI_Employee_Vault/Inbox/: TEST_DEMO_FILE.txt
AI_Employee_Vault/Logs/: 2026-02-15_session.json
AI_Employee_Vault/Needs_Action/: ACTION_20260216_023001_Bronze_Tier_Complete.md  ACTION_20260216_023639_Bronze_Tier_Complete.md  ACTION_20260216_025350_Bronze_Tier_Complete.md  ACTION_20260216_032209_Bronze_Tier_Complete.md  EMAIL_TEST_1771025138.md  META_FILE_DROP_TEST_1771025138.md  TEST_Qwen_Code_Functionality.md
AI_Employee_Vault/Pending_Approval/: EMAIL_APPROVAL_1771025138.md
AI_Employee_Vault/Plans/: PLAN_INVOICE_CLIENT_1771025138.md
History/: history_log.txt
Prompts/: prompt_templates.txt
spec_kit/: README.md  SPEC_KIT.md  architecture_spec.md  deployment_ops_guide.md  implementation_guide.md  testing_validation_spec.md
watchers/: base_watcher.py  filedrop_watcher.py  gmail_watcher.py  inbox_watcher.py
