[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-employee-hackathon"
version = "0.1.0"
description = "AI Employee system for the hackathon project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=3.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]